# freyr-doc

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: main.css  output.css  tailwind.css
src/: main.rs
src/components/: code_block_component.rs  dialog_component.rs  dropdown_component.rs  dropdown_menu_component.rs  home_components.rs  mod.rs  navbar.rs  tabs_secondary_component.rs  translation_buttons.rs
src/translations/: de-DE.ftl  en-UK.ftl  en-US.ftl  fr-FR.ftl
src/views/: about.rs  accordion_page.rs  button_page.rs  carousel_page.rs  dialog_page.rs  dropdown_page.rs  home.rs  mod.rs  navbar_page.rs  spinner_page.rs  tabs_page.rs
