[package]
name = "documentation"
version = "0.1.0"
authors = ["Cyprien de Fontenay"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-i18n = "0.3.0"
freyr = "0.1.10"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
